--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "illuminate/events": "*",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
         "symfony/http-foundation": "^6.3"
     },
