--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "The skeleton application for the Laravel framework.",
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
@@ -12,7 +12,6 @@
         "illuminate/events": "*",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
         "symfony/http-foundation": "^6.3"
     },
